Cosmetic fix for search page on small screens

--- a/docusaurus-search-local/src/client/theme/SearchPage/SearchPage.module.css
+++ b/docusaurus-search-local/src/client/theme/SearchPage/SearchPage.module.css
@@ -1,4 +1,4 @@
-.searchVersionInput,
+.searchContextInput,
 .searchQueryInput {
   border-radius: var(--ifm-global-radius);
   border: var(--ifm-global-border-width) solid
@@ -29,4 +29,25 @@
 .searchResultItemSummary {
   font-style: italic;
   margin: 0.5rem 0px 0px;
+}
+
+@media only screen and (max-width: 996px) {
+  .searchQueryColumn {
+    max-width: 60% !important;
+  }
+
+  .searchContextColumn {
+    max-width: 40% !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .searchQueryColumn {
+    max-width: 100% !important;
+  }
+
+  .searchContextColumn {
+    max-width: 100% !important;
+    padding-left: var(--ifm-spacing-horizontal) !important;
+  }
 }
